# SetArchitect

./: .gitignore  README.md  pyproject.toml  start.bat
src/backend/: main.py  schemas.py
src/backend/routers/: health.py  tracks.py
src/backend/utils/: audio_analyser.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.css  App.jsx  index.css  schemas.js
src/frontend/src/components/: AnalysisPanel.jsx  Equaliser.jsx  Footer.jsx  Header.jsx  Icons.jsx  MainPanel.jsx  OptimisationPanel.jsx  TrackTable.css  TrackTable.jsx  Tracklist.jsx
src/frontend/src/utils/: file-utils.js
