[project]
name = "setarchitect"
version = "0.1.0"
description = ""
authors = [
    {name = "LewisDean22",email = "lewisdean22@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp (>=2026.2.4,<2027.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "aubio (>=0.4.9,<0.5.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "deeprhythm (>=0.0.13,<0.0.14)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
