[project]
name = "setarchitect"
version = "0.1.0"
description = ""
authors = [
    {name = "LewisDean22",email = "lewisdean22@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp (>=2026.2.4,<2027.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "deeprhythm (>=0.0.13,<0.0.14)",
    "yappi (>=1.7.3,<2.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "fastapi[standard] (>=0.129.2,<0.130.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
